--- a/dicee.html
+++ b/dicee.html
@@ -26,7 +26,7 @@
 
 
     <footer>
-      www 🎲 App Brewery 🎲 com
+      🎲 &copy; Copyright 2020 🎲 
     </footer>
 
     <script src="index.js" charset="utf-8"></script>
